--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,17 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        mavenLocal()
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
+        // classpath 'muwa.forgegradle:muwafg:1.0'
+        classpath files('C:\\Users\\muwa\\work\\Muwa-Legacy-ForgeGradle-Extension\\build\\libs\\muwafg-1.0.jar')
     }
 }
 
 apply plugin: 'forge'
+apply plugin: 'muwafg'
 
 version = "1.0"
 group= "muwa"
@@ -25,10 +29,7 @@ sourceCompatibility = targetCompatibility = 1.8
 String minetweakerVersion = '3.0.11.23'
 
 minecraft {
-    // version = "1.7.10-10.13.4.1614-1.7.10"
     version = "1.7.10-10.13.4.1448-1.7.10"
-    runDir = "eclipse"
-    // mappings = 'stable_12'
 }
 
 repositories {
@@ -47,11 +48,8 @@ repositories {
 
 dependencies {
     compileOnly 'MineTweaker3:MineTweaker3-API:' + minetweakerVersion
-    compile name: 'witchery-1.7.10-0.24.1-dev'
-    runtime name: 'MineTweaker3-1.7.10-3.0.10B-dev'
-    // compile name: 'CodeChickenCore-1.7.10-1.0.7.47-universal-dev'
-    // compile name: 'NotEnoughItems-1.7.10-2.0.1-dev'
-    // compile name: 'CodeChickenLib-1.7.10-1.1.3.138-universal-dev'
+    compile muwafgdep.deobf(name: 'witchery-1.7.10-0.24.1')
+    runtime muwafgdep.deobf(name: 'MineTweaker3-1.7.10-3.0.10B')
     compile "codechicken:CodeChickenLib:1.7.10-1.1.3.140:dev"
     compileOnly "codechicken:CodeChickenLib:1.7.10-1.1.3.140:src"
     compile "codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev"
@@ -77,27 +75,32 @@ processResources
     }
 }
 
-task buildClient {
-    doFirst {
-        jar {
-            exclude 'muwa/witcherytweaker/coremod'
-            version += '-client'
-        }
+jar {
+    manifest {
+        attributes 'FMLCorePlugin': 'muwa.witcherytweaker.coremod.CorePlugin'
+        attributes 'FMLCorePluginContainsFMLMod': 'true'
     }
+}
 
+def clientCode = {
+    version += '-client'
+    jar {
+        exclude 'muwa/witcherytweaker/server'
+    }
+}
+
+def serverCode = {
+    version += '-server'
+    jar
+}
+
+task buildClient {
+    doFirst clientCode
     finalizedBy build
 }
 
 task buildServer {
-    doFirst {
-        jar {
-            manifest {
-                attributes 'FMLCorePlugin': 'muwa.witcherytweaker.coremod.CorePlugin'
-                attributes 'FMLCorePluginContainsFMLMod': 'true'
-            }
-            version += '-server'
-        }
-    }
+    doFirst serverCode
     finalizedBy build
 }
 
