--- a/build.gradle
+++ b/build.gradle
@@ -9,17 +9,24 @@ buildscript {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        repositories {
+            maven {
+                url "https://plugins.gradle.org/m2/"
+            }
+        }
         mavenLocal()
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:1.2-SNAPSHOT'
         // classpath 'muwa.forgegradle:muwafg:1.0'
         classpath files('C:\\Users\\muwa\\work\\Muwa-Legacy-ForgeGradle-Extension\\build\\libs\\muwafg-1.0.jar')
+        classpath "com.wynprice.cursemaven:CurseMaven:1.+"
     }
 }
 
 apply plugin: 'forge'
 apply plugin: 'muwafg'
+apply plugin: "com.wynprice.cursemaven"
 
 version = "1.0"
 group= "muwa"
@@ -51,8 +58,8 @@ repositories {
 
 dependencies {
     compileOnly 'MineTweaker3:MineTweaker3-API:' + minetweakerVersion
-    compile muwafgdep.deobf(name: 'witchery-1.7.10-0.24.1')
-    runtime muwafgdep.deobf(name: 'MineTweaker3-1.7.10-3.0.10B')
+    compile muwafgdep.deobf('curse.maven:witchery-1.7.10-0.24.1:2234410')
+    runtime muwafgdep.deobf('curse.maven:MineTweaker3-1.7.10-3.0.10B:2259434')
     compile "codechicken:CodeChickenLib:1.7.10-1.1.3.140:dev"
     compileOnly "codechicken:CodeChickenLib:1.7.10-1.1.3.140:src"
     compile "codechicken:CodeChickenCore:1.7.10-1.0.7.47:dev"
@@ -80,16 +87,16 @@ processResources
 
 jar {
     manifest {
-        attributes 'FMLCorePlugin': 'muwa.witcherytweaker.coremod.CorePlugin'
+        attributes 'FMLCorePlugin': 'yopoyka.witcherytweaker.coremod.CorePlugin'
         attributes 'FMLCorePluginContainsFMLMod': 'true'
     }
 }
 
 runClient {
-    args += ['--username', 'Dev']
-    systemProperty 'fml.coreMods.load', 'muwa.witcherytweaker.coremod.CorePlugin'
+    args += ['--username', project.hasProperty('mcname') ? project.getProperty('mcname') : 'Dev']
+    systemProperty 'fml.coreMods.load', 'yopoyka.witcherytweaker.coremod.CorePlugin'
 }
 
 runServer {
-    systemProperty 'fml.coreMods.load', 'muwa.witcherytweaker.coremod.CorePlugin'
+    systemProperty 'fml.coreMods.load', 'yopoyka.witcherytweaker.coremod.CorePlugin'
 }
